Add EF for storing tasks. Add mssql to docker-compose

--- a/TaskManagementSystem/appsettings.json
+++ b/TaskManagementSystem/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=tasks-db;User Id=sa;Password=P@ssw0rd!;TrustServerCertificate=true;"
+  },
   "RabbitMQ": {
     "Hostname":"localhost",
     "Username":"guest",
