--- a/TaskManagementSystem.Infrastructure/TaskManagementSystem.Infrastructure.csproj
+++ b/TaskManagementSystem.Infrastructure/TaskManagementSystem.Infrastructure.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+        <PackageReference Include="Polly" Version="7.2.3" />
         <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
         <PackageReference Include="System.Threading.Channels" Version="7.0.0" />
     </ItemGroup>
